--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.0",
     "mongoose-paginate-v2": "^1.6.1",
+    "multer": "^1.4.4",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
+    "@nuxtjs/date-fns": "^1.5.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "autoprefixer": "^10.4.2",
     "nodemon": "^2.0.15",
